use monospace font

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,16 @@
 <html>
-<head>
-</head>
-<body style="width: 400px">
-  <div>List of audio files:</div>
-  <div id="audio-list"></div>
-  <script src="popup.js"></script>
-</body>
+  <head>
+    <style>
+      <!--
+      body {
+          font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+      }
+      -->
+    </style>
+  </head>
+  <body style="width: 400px">
+    <div>List of audio files:</div>
+    <div id="audio-list"></div>
+    <script src="popup.js"></script>
+  </body>
 </html>
